@@ -4,14 +4,16 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 
 public class Group {
-    private String name;
-    private int id_owner;
+    private final String name;
+    private final int id_owner;
     private int[] id_members;
     private LinkedList<Integer> membersIdList;  // liste qui représente les membres du groupes
     private ArrayList<Boolean> listReceived;    // liste qui représente qui a déjà envoyé sa liste
 
-    private boolean toBeDeleted;
-    private boolean makeFinalList = false;  // indique si l'admin a demandé de faire une liste finale
+    private ArrayList<User> userList;   // list that combines the two above
+
+    private boolean toBeDeleted = false;
+    private boolean onGoingMakeFinal = false;  // indique si l'admin a demandé de faire une liste finale
     private final String password;
 
     public Group(int adminId, String name, String password){
@@ -22,7 +24,12 @@ public class Group {
         membersIdList.add(adminId);
         listReceived = new ArrayList<>();
         listReceived.add(false);
+
+        this.userList = new ArrayList<>();
+        userList.add(new User(adminId, false));
+
     }
+
 
     public LinkedList<Integer> getMembersIdList() {
         return membersIdList;
@@ -31,11 +38,37 @@ public class Group {
     public void addMember(int memberId) {
         membersIdList.add(memberId);
         listReceived.add(false);
+
+        userList.add(new User(memberId, false));
+    }
+
+    public boolean getOnGoingMakeFinal() {
+        return onGoingMakeFinal;
+    }
+
+    public void setOnGoingMakeFinal(boolean onGoingMakeFinal) {
+        this.onGoingMakeFinal = onGoingMakeFinal;
+    }
+
+    public void setToBeDeleted(boolean toBeDeleted) {
+        this.toBeDeleted = toBeDeleted;
+    }
+
+    public boolean getToBeDeleted() {
+        return toBeDeleted;
     }
 
     public void removeMember(int memberId) {
         membersIdList.remove(memberId);
         listReceived.remove(memberId);
+
+        for (User user : userList) {
+            if (user.getId() == memberId) {
+                userList.remove(user);
+                return;
+            }
+        }
+        System.out.println("Weird : couldn't find the desired user in the list");
     }
 
     public String name() {
@@ -55,15 +88,22 @@ public class Group {
     }
 
     public boolean everyoneButAdminLeft(){
-        return membersIdList.size() == 1 && membersIdList.get(0) == id_owner;
+        return membersIdList.size() == 1 && membersIdList.getFirst() == id_owner;
     }
 
-    public boolean getMakeFinalList() {
-        return makeFinalList;
+    public void memberSentList(int clientId){
+        for (User user : userList) {
+            if (user.getId() == clientId) {
+                user.setListReceived(true);
+            }
+        }
     }
 
-    public void setMakeFinalList(boolean makeFinalList) {
-        this.makeFinalList = makeFinalList;
+    public boolean everyoneSentList(){
+        for (User user : userList) {
+            if (!user.listReceived()) return false;
+        }
+        return true;
     }
 
     public void notifiyListReceived(int memberId) {
@@ -95,7 +135,7 @@ public class Group {
     }
 }
 
-/*  Test class
+
 class User {
     private final int id;
     private boolean listReceived;
@@ -112,8 +152,8 @@ class User {
         this.listReceived = listReceived;
     }
 
-    public boolean isListReceived() {
+    public boolean listReceived() {
         return listReceived;
     }
 }
-*/
+
